--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,27 @@
+h1 {
+  font-size: 3rem;
+  color: var(--primary);
+  padding: 0;
+  margin: 0;
+  margin-bottom: 0.25em;
+
+  background-color: var(--secondary);
+  padding-inline: 1em;
+  border-radius: 0.2em;
+}
+
 .App {
   width: 100%;
-  height:100%;
+  height: 100%;
+
+  margin: auto;
+  padding: 1em;
+  box-sizing: border-box;
+  justify-content: center;
+  align-content: center;
 
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
