--- a/src/App.css
+++ b/src/App.css
@@ -25,3 +25,11 @@ h1 {
   align-items: center;
   justify-content: center;
 }
+
+.settings {
+  width: 100%;
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
